--- a/index.html
+++ b/index.html
@@ -59,17 +59,18 @@
 
     </style>
 </head>
-
 <body>
+<h1>Hi, i'm Boy</h1>
+<P>Your welcome to DM me</P>
     <div class="Intragram-container">
         <a class="Intragram-button" href="https://www.facebook.com/share/1E4Naf2gNv/?mibextid=wwXIfr" target="_blank">
             <img class="Intragram-icon" src="https://upload.wikimedia.org/wikipedia/commons/5/51/Facebook_f_logo_%282019%29.svg" alt="facebook logo" width="30" height="30">
-            Click my Facebook
+             Facebook
         </a>
         <br><br>
         <a class="Intragram-button" href="https://www.instagram.com/b_boyzy28/#" target="_blank">
             <img class="Intragram-icon" src="https://upload.wikimedia.org/wikipedia/commons/a/a5/Instagram_icon.png" alt="instagram logo" width="30" height="30">
-            Click my Instagram
+              Instagram
         </a>
     </div>
 
