--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>My instagram Profile</title>
+    <title>My Profile</title>
 
     <link href="https://fonts.google.com/specimen/Caudex?preview."rel="stylesheet">
 
