--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>My Profile</title>
 
     <link href="https://fonts.google.com/specimen/Caudex?preview."rel="stylesheet">
+    <img src="c:\Users\ADVICE\OneDrive\Pictures\Instagram_files\74914119_2349586052018182_981153319919550464_n(1).jpg"/>
 
     <style>
         body {
